deploy/tests/PolkadotAzure/NetworkPolicyTest.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: backend-policy
  namespace: development
spec:
  podSelector:
    matchLabels:
      app: webapp
      role: backend
  ingress:
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app: webapp
              role: frontend
